[gd_scene load_steps=3 format=3 uid="uid://bl143fdly0nlm"]

[ext_resource type="Texture2D" uid="uid://bynnxqu72djpi" path="res://Assets/Buildings/forge.png" id="1_ewbv2"]
[ext_resource type="Script" uid="uid://dsxqdouoq2nik" path="res://forge.gd" id="1_lg3is"]

[node name="Forge" type="StaticBody2D"]
z_index = 1
z_as_relative = false
script = ExtResource("1_lg3is")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 2
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_ewbv2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(185, 208)
polygon = PackedVector2Array(-63, 63, 26, 14, 45, 54, 86, 36, 68, -2, 65, -35, 20, -53, -100, -36, -115, 16)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(166, 201)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(83, -16, 79, 14, 105, 8, 111, 47, 90, 90, 31, 105, -24, 74, -60, 48, -85, 2, 7, -23)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
